--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+     <!--Sweet Alert2-->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+     <link rel="manifest" href="/site.webmanifest">
     <title>SUA - MEDICINA NATURAL</title>
 </head>
 <body>
+   <header>
+    <!--hero image-->
+    <div>
+        <img id="sua-logo" src="assets/images/sua-logo-v.png"
+    </div>
+   </header>
+   <main>
+
+   </main>
+   <footer>
+
+   </footer>
     
 </body>
 </html>
