Add main and footer, take out sweet alert for the moment

--- a/index.html
+++ b/index.html
@@ -13,24 +13,43 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-     <!--Sweet Alert2-->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
-     <link rel="manifest" href="/site.webmanifest">
     <title>SUA - MEDICINA NATURAL</title>
 </head>
 <body>
-   <header>
+    <header>
     <!--hero image-->
     <div>
         <img id="sua-logo" src="assets/images/sua-logo-v.png"
     </div>
-   </header>
-   <main>
+    </header>
+    <main>
+        <!--Anchor section for the user to select-->
+        <div>
+            <a class="pages-btns">Productos</a>
+            <a class="pages-btns">Sobre Nosotros</a>
+            <a class="pages-btns">Contactanos</a>
+        </div>
+        <div>
+            <p class="quote">"Usa los aceites esenciales con cualquier noble intencion, para salud, bienestar, disfrute y plenitud"</p>
+            <p class="quote">SUA - Medicina y Cosmética Natural</p>
+        </div>
+        <div>
+            <p class="info">Haz tu pedido atravez de Whatsapp al numero ###, o contactanos para mas informacion</p>
+        </div>
 
-   </main>
-   <footer>
+    </main>
+    <footer>
+        <!--Social networks links on the bottom of the screen-->
+        <ul id="social-networks">
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram Page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
 
-   </footer>
-    
+    </footer>
+        <!--JavaScript Page-->
+        <script src="assets/js/script.js"></script>
 </body>
 </html>
