--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta search engines-->
     <meta name="description" content="SUA - Medicina Natural. Aceites esenciales, productos ecologicos elaborados en Colombia. ">
@@ -18,23 +19,24 @@
 <body>
     <header>
     <!--hero image-->
-    <div>
+    <div id="logo-container">
         <img id="sua-logo" src="assets/images/sua-logo-v.png"
     </div>
     </header>
     <main>
         <!--Anchor section for the user to select-->
-        <div>
-            <a class="pages-btns">Productos</a>
-            <a class="pages-btns">Sobre Nosotros</a>
-            <a class="pages-btns">Contactanos</a>
+        <div class="a-container">
+            <a href="produtos.html" class="pages-btns">Productos</a>
+            <a href="sobrenosotros.html" class="pages-btns">Sobre Nosotros</a>
+            <a href="contactanos.html" class="pages-btns">Contactanos</a>
         </div>
         <div>
             <p class="quote">"Usa los aceites esenciales con cualquier noble intencion, para salud, bienestar, disfrute y plenitud"</p>
             <p class="quote">SUA - Medicina y Cosmética Natural</p>
         </div>
         <div>
-            <p class="info">Haz tu pedido atravez de Whatsapp al numero ###, o contactanos para mas informacion</p>
+            <p class="info">Haz tu pedido atravez de Whatsapp al numero ###</p> 
+            <p>o contactanos para mas informacion</p>
         </div>
 
     </main>
@@ -47,7 +49,8 @@
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
-
+        </ul>
+        <p>Todos los derechos reservados, 2024</p>
     </footer>
         <!--JavaScript Page-->
         <script src="assets/js/script.js"></script>
