Add basic style to main page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <p class="info">Haz tu pedido atravez de Whatsapp al numero ###</p> 
-            <p>o contactanos para mas informacion</p>
+            <p class="info">o contactanos para mas informacion</p>
         </div>
 
     </main>
@@ -44,15 +44,23 @@
         <!--Social networks links on the bottom of the screen-->
         <ul id="social-networks">
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram Page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit our Instagram Page (opens in a new tab)"><i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li><a href="https://www.whatsapp.com" target="_blank" rel="noopener"
+                aria-label="Contactanos a nuestro Whatsapp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></i>
+            </a>
+        </li>
         </ul>
-        <p>Todos los derechos reservados, 2024</p>
+        <p id="derechos">Todos los derechos reservados, 2024</p>
     </footer>
-        <!--JavaScript Page-->
-        <script src="assets/js/script.js"></script>
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/485eda7821.js" crossorigin="anonymous"></script>
+    <!--JavaScript Page-->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
