Add hero and style

--- a/produtos.html
+++ b/produtos.html
@@ -29,14 +29,28 @@
         <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
-                    <li class="active nav-item mr-2"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="produtos.html">Productos</a></li>
+                <ul class="navbar-nav mr-auto nav-titles">
+                    <li class="nav-item mr-2"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="active nav-item mr-2"><a class="nav-link" href="produtos.html">Productos</a></li>
                     <li class="nav-item mr-2"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
                     <li class="nav-item mr-2"><a class="nav-link" href="contactanos.html">Contactanos</a></li>
     </header>
     <main>
-        <!--Anchor section for the user to select-->
+            <!-- Callout -->
+        <div class="opaque-overlay">&nbsp;</div>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout jumbotron text-center">
+                    <h1 class="jumbotron-header">Aceites Escenciales, difusores, cuidado personal y mucho mas</h1>
+                    <hr class="block-divider block-divider--orange">
+            </div>
+        <!-- /.callout -->
+        </div>
+        </div>
+        <div class="aceites">
+            <h2>Aceites Escenciales</h2>
+
+        </div>
     </main>
     <footer>
         <!--Social networks links on the bottom of the screen-->
