--- a/produtos.html
+++ b/produtos.html
@@ -48,7 +48,20 @@
         </div>
         </div>
         <div class="aceites">
-            <h2>Aceites Escenciales</h2>
+            <h2 class="aceites-ttl">Aceites Escenciales</h2>
+            <p class="aceites-ttl">100% Puros y Naturales</p>
+            <div id="product-container-a" class="product-grid">
+                <div class="image-container"> <img src="assets/images/romero.png" alt="romero" id="romero" ></div>
+                <div class="image-container"><img src="assets/images/lavanda.png" alt="lavanda" id="lavanda"></div>
+                <div class="image-container"><img src="assets/images/arboldete.png" alt="arboldete" id="arboldete" ></div>
+                <div class="image-container"><img src="assets/images/cipres.png" alt="cipres" id="cipres"></div>
+                <div class="image-container"><img src="assets/images/citronela.png" alt="citronela" id="citronela"></div>
+                <div class="image-container"><img src="assets/images/eucalipto.png" alt="eucalipto" id="eucalipto"></div>
+                <div class="image-container"><img src="assets/images/geranio.png" alt="geranio" id="geranio"></div>
+                <div class="image-container"><img src="assets/images/mandarina.png" alt="mandarina" id="mandarina"></div>
+                <div class="image-container"><img src="assets/images/menta.png" alt="menta" id="menta"></div>
+                <div class="image-container"><img src="assets/images/naranja.png" alt="naranja" id="naranja"></div>
+            </div>
 
         </div>
     </main>
