Add Otros productos section

--- a/produtos.html
+++ b/produtos.html
@@ -50,7 +50,7 @@
         <div class="aceites">
             <h2 class="aceites-ttl">Aceites Escenciales</h2>
             <p class="aceites-ttl"><em>100% Puros y Naturales</em></p>
-            <div id="product-container-a" class="product-grid">
+            <div class="product-container-a product-grid">
                 <div class="image-container">
                     <img src="assets/images/romero.png" alt="romero" id="romero">
                     <div class="price">$25.000</div>
@@ -91,7 +91,38 @@
                     <div class="price">$25.000</div>
                 </div>
             </div>
-
+        </div>
+        <div class="difusores col-12 d-none d-md-block">
+                <img src="assets/images/difusores.png" alt="difusores" id="difusores-img">
+                <p class="navbar-text my-auto mr-2"><i>Pregunta por nuestros difusores disponibles!</i></p>
+                <a href="/whatsapp" class="link">Haz tus pedidos via whatsapp!</a>
+            </div>
+        </div>
+        <div class="letters">
+        <h2 class="cuidado-1">Cuidado Facial y Capilar</h2>
+            <p class="cuidado-1"> <em> Rollos Faciales, Aceites escenciales diluidos para el cuidado de la piel y hidrolatos</em></p>
+        </div>
+            <div class="otros-productos product-container-a product-grid">
+            <div class="image-container">
+                <img src="assets/images/mix-citrico.png" alt="mix-c" id="mix-c">
+                <div class="price">Mix Citrico $12.000</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/mix-s-l.png" alt="mix-s-l" id="mix-s-l">
+                <div class="price">Roll-on Salvia/Lavanda $12.000</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/mix-a-t.png" alt="mix-a-t" id="mix-a-t">
+                <div class="price">Roll-on Anti-Acne $20.000</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/hidrolato-r.png" alt="hidrolato-r" id="hidrolato-r">
+                <div class="price">Hidrolato de romero $20.000</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/hisdrolato-l.png" alt="hidrolato-l" id="hidrolato-l">
+                <div class="price">Hidrolato de lavanda $20.000</div>
+            </div>
         </div>
     </main>
     <footer>
