Add Complete porduct page, Add pdf

--- a/produtos.html
+++ b/produtos.html
@@ -49,7 +49,7 @@
         </div>
         <div class="aceites">
             <h2 class="aceites-ttl">Aceites Escenciales</h2>
-            <p class="aceites-ttl"><em>100% Puros y Naturales</em></p>
+            <p class="aceites-ttl"><em>100% Puros y Naturales, precios por 5 ml</em></p>
             <div class="product-container-a product-grid">
                 <div class="image-container">
                     <img src="assets/images/romero.png" alt="romero" id="romero">
@@ -117,13 +117,65 @@
             </div>
             <div class="image-container">
                 <img src="assets/images/hidrolato-r.png" alt="hidrolato-r" id="hidrolato-r">
-                <div class="price">Hidrolato de romero $20.000</div>
+                <div class="price">Hidrolato de romero $20.000 (50ml)</div>
             </div>
             <div class="image-container">
                 <img src="assets/images/hisdrolato-l.png" alt="hidrolato-l" id="hidrolato-l">
-                <div class="price">Hidrolato de lavanda $20.000</div>
+                <div class="price">Hidrolato de lavanda $20.000 (50ml)</div>
             </div>
+    </div>
+        <div class="bg-color-o-p">
+        <div class="letters">
+            <h2 class="cuidado-1">Salud y Cuidado Corporal</h2>
+                <p class="cuidado-1"> <em> Aceites corporales, unguentos, pomadas y CBD</em></p>
+            </div>
+            <div class="otros-productos product-container-a product-grid">
+                <div class="image-container">
+                    <img src="assets/images/mix-relajante.png" alt="mix-relajante" id="mix-relajante">
+                    <div class="price">Mix Relajante $###.000(50ml)</div>
+                </div>
+                <div class="image-container">
+                    <img src="assets/images/mix-revitalizante.png" alt="mix-revitalizante" id="mix-revitalizante">
+                    <div class="price">Mix mix-revitalizante $###.000(50ml)</div>
+                </div>
+                <div class="image-container">
+                    <img src="assets/images/pomada-natural.png" alt="pomada-natural" id="pomada-natural">
+                    <div class="price">Ungüento Natural. Caléndula y Romero $10.000(10gr)/ $20.000(30gr)</div>
+                </div>
+                <div class="image-container">
+                    <img src="assets/images/pomada-alivio.png" alt="pomada-alivio" id="pomada-alivio">
+                    <div class="price">Pomada Alivio Natural. Cannabis, Eucalipto y ciprés $25.000(10gr)/ $40.000(30gr)</div>
+                </div>
+                <div class="image-container">
+                    <img src="assets/images/cbd.png" alt="cbd" id="cbd">
+                    <div class="price">Aceite: CBD + Lavanda $50.000(30ml)</div>
+                </div>
         </div>
+    </div>
+    <div class="letters">
+        <h2 class="cuidado-1">Higiene</h2>
+            <p class="cuidado-1"> <em> Natural y libre de tóxicos</em></p>
+        </div>
+        <div class="otros-productos product-container-a product-grid">
+            <div class="image-container">
+                <img src="assets/images/pasta-dental.png" alt="pasta-dental" id="pasta-dental">
+                <div class="price">Pasta Dental $20.000 (50gr)</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/desodorante.png" alt="desodorante" id="desodorante">
+                <div class="price">Desodorante Natural $15.000(30gr)/ $30.000(80gr)</div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/desinfectante.png" alt="desinfectante" id="desinfectante">
+                <div class="price">Desinfectante/ Limpiador Ecologico $15.000(500ml)</div>
+            </div>
+    </div>
+    <div class="difusores col-12 d-none d-md-block">
+        <img src="assets/images/catalogo-img.png" alt="catalogo-img" id="catalogo-img">
+        <p class="navbar-text my-auto mr-2"><i>Tambien puedes ver nuestro catalogo completo!</i></p>
+        <a href="assets/pdf/catalogo-2023.pdf" class="link" target="_blank">Click para descargar</a>
+    </div>
+</div>
     </main>
     <footer>
         <!--Social networks links on the bottom of the screen-->
