--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <nav class="navbar navbar-dark navbar-expand-sm">
-            <a href="/" class="navbar-brand"><img src="assets/images/sua-nav.png" id="logo-sua" alt="logo-sua"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/images/sua-nav.png" id="logo-sua" alt="logo-sua"></a>
 
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span></button>
