Add full page of sobre nosotros

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -31,38 +31,37 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto nav-titles">
                     <li class="nav-item mr-2"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="active nav-item mr-2"><a class="nav-link" href="produtos.html">Productos</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
+                    <li class=" nav-item mr-2"><a class="nav-link" href="produtos.html">Productos</a></li>
+                    <li class="active nav-item mr-2"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
                     <li class="nav-item mr-2"><a class="nav-link" href="contactanos.html">Contactanos</a></li>
     </header>
     <main>
-            <!-- Callout -->
-        <div class="opaque-overlay">&nbsp;</div>
-        <div class="row">
-            <div class="col-12">
-                <section class="callout-a jumbotron text-center">
-                    <h1 class="jumbotron-header"><em>"NUESTROS PRODUCTOS BENEFICIAN LA SALUD FÍSICA, EMOCIONAL Y ESPIRITUAL DE LAS PERSONAS DE MANERA NATURAL, RESPETUOSA Y CONSCIENTE CON EL MEDIO AMBIENTE”</em></h1>
-                    <hr class="block-divider block-divider--orange">
-            </div>
-        <!-- /.callout -->
-        <div class="aceites">
-            <h2 class="aceites-ttl">SOBRE NOSOTROS</h2>
-        </div>
+<!-- Callout -->
+<div class="row">
+    <div class="col-12">
+        <section class="callout-a jumbotron text-center">
+            <h1 class="jumbotron-header"><em>"NUESTROS PRODUCTOS BENEFICIAN LA SALUD FÍSICA, EMOCIONAL Y ESPIRITUAL DE LAS PERSONAS DE MANERA NATURAL, RESPETUOSA Y CONSCIENTE CON EL MEDIO AMBIENTE”</em></h1>
+        
+        </section>
+    </div>
+</div>
+<!-- /.callout -->
+
+<div class="aceites">
+    <h2 class="aceites-ttl">SOBRE NOSOTROS<i class="fa-brands fa-pagelines" style="color: #fafafa;"></i></h2>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <img id="sobre-nosotros-img" src="assets/images/sobrenosotros.png" alt="sobrenosotros">
+    </div>
+    <div class="col-md-6">
         <div class="text-p">
-            <p> Somos una empresa familiar ubicada en el municipio de
-                Bojacá, Cundinamarca. Producimos y comercializamos
-                aceites esenciales puros, además elaboramos productos
-                naturales para la salud y el bienestar a partir de materias
-                primas ecológicas, propias y de otros productores
-                nacionales.
-                Estamos comprometidos con formas de vida sostenibles,
-                conscientes y responsables con el medio ambiente, por
-                esto, promovemos las prácticas agroecológicas en
-                nuestros cultivos.
-                Nuestros productos benefician la salud física, emocional
-                y espiritual de las personas de manera natural,
-                respetuosa y consciente con el medio ambiente</p>
+            <p> Somos una empresa familiar ubicada en el municipio de Bojacá, Cundinamarca. Producimos y comercializamos aceites esenciales puros, además elaboramos productos naturales para la salud y el bienestar a partir de materias primas ecológicas, propias y de otros productores nacionales. Estamos comprometidos con formas de vida sostenibles, conscientes y responsables con el medio ambiente, por esto, promovemos las prácticas agroecológicas en nuestros cultivos. Nuestros productos benefician la salud física, emocional y espiritual de las personas de manera natural, respetuosa y consciente con el medio ambiente</p>
+            <img src="assets/images/sellos.png" alt="sellos">
         </div>
+    </div>
+</div>
     <div class="difusores col-12 d-none d-md-block">
         <img src="assets/images/catalogo-img.png" alt="catalogo-img" id="catalogo-img">
         <p class="navbar-text my-auto mr-2"><i>Tambien puedes ver nuestro catalogo completo!</i></p>
