Fix style in sobre nosotros

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -58,7 +58,7 @@
     <div class="col-md-6">
         <div class="text-p">
             <p> Somos una empresa familiar ubicada en el municipio de Bojacá, Cundinamarca. Producimos y comercializamos aceites esenciales puros, además elaboramos productos naturales para la salud y el bienestar a partir de materias primas ecológicas, propias y de otros productores nacionales. Estamos comprometidos con formas de vida sostenibles, conscientes y responsables con el medio ambiente, por esto, promovemos las prácticas agroecológicas en nuestros cultivos. Nuestros productos benefician la salud física, emocional y espiritual de las personas de manera natural, respetuosa y consciente con el medio ambiente</p>
-            <img src="assets/images/sellos.png" alt="sellos">
+            <img id="sellos" src="assets/images/sellos.png" alt="sellos">
         </div>
     </div>
 </div>
