Fix contactanos page Fix COLORS

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -48,7 +48,7 @@
 <!-- /.callout -->
 
 <div class="aceites">
-    <h2 class="aceites-ttl">SOBRE NOSOTROS<i class="fa-brands fa-pagelines" style="color: #fafafa;"></i></h2>
+    <h2 class="aceites-ttl">SOBRE NOSOTROS<i class="fa-brands fa-pagelines" style="color: #000000;"></i></h2>
 </div>
 
 <div class="row">
