Add links to insta and whatsapp

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer>
         <!--Social networks links on the bottom of the screen-->
         <ul id="social-networks">
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+            <li><a href="https://www.instagram.com/sua.esencial/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram Page (opens in a new tab)"><i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
@@ -51,7 +51,7 @@
                     aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
-            <li><a href="https://www.whatsapp.com" target="_blank" rel="noopener"
+            <li><a href="https://wa.me/573133978768" target="_blank" rel="noopener"
                 aria-label="Contactanos a nuestro Whatsapp (opens in a new tab)"><i class="fa-brands fa-whatsapp"></i></i>
             </a>
         </li>
