Add whatsapp style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="quote">SUA - Medicina y Cosmética Natural</p>
         </div>
         <div>
-            <p class="info">Haz tu pedido atravez de Whatsapp al numero ###</p> 
+            <p class="info">Haz tu pedido atravez de Whatsapp +57 3133978768 o +57 3232898926</p> 
             <p class="info">o contactanos para mas informacion</p>
         </div>
 
