--- a/contactanos.html
+++ b/contactanos.html
@@ -38,12 +38,12 @@
     <main>
     <div id="hero-image-contact">
         <h1 class="ttle">Cuentanos en que te podemos ayudar? </h1>
-
-        <form id="form" class="topBefore">
+<!--action="https://formsubmit.co/sua.esencial@gmail.com" form submit page have a look-->
+        <form  id="form" class="topBefore" method="POST">
                 
-                <input id="name" type="text" placeholder="NAME">
-                <input id="email" type="text" placeholder="E-MAIL">
-                <textarea id="message" type="text" placeholder="MENSAGE"></textarea>
+                <input id="name" type="text" placeholder="NAME" required>
+                <input id="email" type="text" placeholder="E-MAIL" required>
+                <textarea id="message" type="text" placeholder="MENSAGE" required></textarea>
         <input id="submit" type="submit" value="ENVIAR!">
         
         </form>
