--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta search engines-->
     <meta name="description" content="SUA - Medicina Natural. Aceites esenciales, productos ecologicos elaborados en Colombia. ">
-    <meta name="keywords" content="sua, medicina natural, aceites esenciales, escential oils, aceites colombia, proucto ecologico, medicina alternativa, Colombia, salud, cosmetica, bienestar "
+    <meta name="keywords" content="sua, medicina natural, aceites esenciales, escential oils, aceites colombia, proucto ecologico, medicina alternativa, Colombia, salud, cosmetica, bienestar ">
     <meta name="author" content="Juan-David-Camelo">
     <!--Bootsrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -17,6 +17,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+    <script src="https://kit.fontawesome.com/485eda7821.js" crossorigin="anonymous"></script>
+
     
     <title>SUA - MEDICINA NATURAL</title>
 </head>
@@ -238,6 +240,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <!-- Your other scripts -->
-<script src="assets/script.js"></script>
+<script src="assets/script.js" defer></script>
 </body>
 </html>
